--- a/package.json
+++ b/package.json
@@ -15,15 +15,26 @@
   "license": "MIT",
   "dependencies": {
     "autoprefixer": "^6.3.7",
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
     "babel-plugin-transform-class-properties": "^6.10.2",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
+    "babel-plugin-transform-es2015-block-scoped-functions": "^6.22.0",
+    "babel-plugin-transform-es2015-block-scoping": "^6.26.0",
+    "babel-plugin-transform-es2015-classes": "^6.24.1",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "babel-plugin-transform-es2015-parameters": "^6.24.1",
+    "babel-plugin-transform-es2015-shorthand-properties": "^6.24.1",
+    "babel-plugin-transform-es2015-spread": "^6.22.0",
+    "babel-plugin-transform-es2015-template-literals": "^6.22.0",
     "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-register": "^6.11.6",
-    "browser-sync": "^2.13.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "browser-sync": "^2.24.7",
     "css-loader": "^0.23.1",
     "date-fns": "^1.11.0",
     "eslint": "^3.1.1",
@@ -35,8 +46,9 @@
     "gulp-postcss": "^6.1.1",
     "gulp-util": "^3.0.7",
     "imports-loader": "^0.6.5",
+    "netlify-cms": "^2.1.2",
     "netlify-context-explorer": "^1.1.0",
-    "netlify-cms": "^0.5.0-beta.10",
+    "npm-install-peers": "^1.2.1",
     "postcss-at2x": "^2.0.0",
     "postcss-colour-functions": "^1.5.1",
     "postcss-cssnext": "^2.7.0",
@@ -49,8 +61,13 @@
     "react": "^15.4.1",
     "string": "^3.3.1",
     "toml": "^2.3.0",
-    "url-loader": "^0.5.7",
+    "url-loader": "^1.1.1",
     "webpack": "^1.13.1",
     "whatwg-fetch": "^1.0.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-env": "^2.4.1",
+    "babel-preset-es2015": "^6.24.1"
   }
 }
