--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-register": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.24.7",
     "css-loader": "^0.23.1",
     "date-fns": "^1.11.0",
