--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,8 @@
 {
-  "presets": [
-    "env",
-    "react",
-    "stage-0"
-  ],
+  "presets": ["es2015"],
   "plugins": [
-    "transform-class-properties",
-    "transform-decorators",
-    "transform-react-constant-elements",
-    "transform-react-inline-elements"
+    "transform-react-jsx",
+    "syntax-object-rest-spread",
+    "transform-object-rest-spread"
   ]
 }
